fix(android): make wear lint gate clean